# UDP-Over-Multiple-Simultaneous-Interfaces

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: Assembler.hpp  Segmenter.hpp  network.h  network.hpp  protocol_headers.h  reciever.hpp  segmenter.hpp  sender.hpp  tekst.txt
src/: Assembler.cpp  Segmenter.cpp  network.c  network.cpp  reciever.cpp  segmenter.cpp  sender.cpp
